# Flamapp.AI

./: .gitignore  LICENSE  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/flamapp/: CameraHandler.java  MainActivity.java  MainGLSurfaceView.java  MainRenderer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
gl/: renderer.cpp  renderer.h
gl/shaders/: fragment.glsl.h  vertex.glsl.h
jni/: CMakeLists.txt  Processor.cpp  Processor.h  native-lib.cpp
web/: index.html  main.ts  package.json  styles.css  tsconfig.json
